packages/kit/test/apps/basics/src/routes/errors/page-endpoint/post-implicit.svelte
<h1>if you see this something went wrong</h1>
